corrigindo a tela de login

--- a/admin/css/style.css
+++ b/admin/css/style.css
@@ -6,7 +6,7 @@
 * {   padding:0;   margin:0; } 
 
 body{
-    background-image: url(./plano\ de\ fundo.jpg);
+    background-image: url(../imagens/plano\ de\ fundo.jpg);
     background-size: cover;
     background-repeat: none;
     margin: 0;
